# the-quasar-engine

./: CMakeLists.txt  README.md  conanfile.txt
engine/: Input.cpp  Input.hpp  Mesh.cpp  Mesh.hpp  Model.cpp  Model.hpp  Renderer.cpp  Renderer.hpp  Window.cpp  Window.hpp
game/: main.cpp
game/models/: test-scene.glb
